添加agent会话功能